--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,9 +1,9 @@
 /******* Customized Bootstrap ********/
 
-$primary: #00B98E;
-$secondary: #FF6922;
-$light: #EFFDF5;
-$dark: #0E2E50;
+$primary: #80c4b7;
+$secondary: #ff6922;
+$light: #effdf5;
+$dark: #0e2e50;
 
 $font-family-base: 'Heebo', sans-serif;
 
@@ -27,4 +27,4 @@ $link-decoration: none;
 
 $enable-negative-margins: true;
 
-@import "bootstrap/scss/bootstrap";
+@import 'bootstrap/scss/bootstrap';
